updt: css to fix text alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -584,6 +584,7 @@ form {
 	min-height: 215px;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 }
 
 /* Sales Chart Page */
